Initial committed