@@ -3,10 +3,15 @@ package com.wcw.wojcodesandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.wcw.wojcodesandbox.model.ExecuteCodeRequest;
 import com.wcw.wojcodesandbox.model.ExecuteCodeResponse;
 import com.wcw.wojcodesandbox.model.ExecuteMessage;
 import com.wcw.wojcodesandbox.model.JudgeInfo;
+import com.wcw.wojcodesandbox.security.DefaultSecurityManager;
+import com.wcw.wojcodesandbox.security.DenySecurityManager;
+import com.wcw.wojcodesandbox.security.MySecurityManager;
 import com.wcw.wojcodesandbox.utils.ProcessUtils;
 
 import java.io.File;
@@ -20,11 +25,19 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
     private static final String GOBLE_CODE_DIR_NAME = "tmpCode";
     private static final String GOBLE_JAVA_CLASS_NAME = "Main.java";
     private static final long TIME_OUT = 5000L;
+    private static final List<String> blockList = Arrays.asList("Files","exec");
+    private static final String Security_MANAGER_PATH = "D:\\API\\woj-code-sandbox\\src\\main\\resources\\testCode\\simpleComputeArgs";
+    private static final String SECURITY_MANAGER_CLASS = "MySecurityManager";
+    private static final WordTree WORD_TREE;
+    static{
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blockList);
+    }
 
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
         ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
-        executeCodeRequest.setInputList(Arrays.asList("1 2","3 4"));
+        executeCodeRequest.setInputList(Arrays.asList("3 4"));
         String code = ResourceUtil.readStr("testCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
         executeCodeRequest.setCode(code);
         executeCodeRequest.setLanguage("java");
@@ -33,9 +46,15 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
     }
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+        //System.setSecurityManager(new MySecurityManager());
         List<String> inputList = executeCodeRequest.getInputList();
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
+        FoundWord foundWord = WORD_TREE.matchWord(code);
+        if(foundWord != null){
+            System.out.println("包含禁止词："+foundWord.getFoundWord());
+            return null;
+        }
         String userDir = System.getProperty("user.dir");
         String gobleCodePathName = userDir + File.separator+ GOBLE_CODE_DIR_NAME;
         if(!FileUtil.exist(gobleCodePathName)){
@@ -49,14 +68,6 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
         String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsoluteFile());
         try {
             Process compileProcess = Runtime.getRuntime().exec(compileCmd);
-            new Thread(() -> {
-                try {
-                    Thread.sleep(TIME_OUT);
-                } catch (InterruptedException e) {
-                    throw new RuntimeException(e);
-                }
-                compileProcess.destroy();
-            }).start();
             ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
             System.out.println(executeMessage);
         }catch(Exception e){
@@ -66,9 +77,19 @@ public class JavaNativeCodeSandbox implements CodeSandbox{
         // 取用时最大值，便于判断是否超时
         long maxTime = 0;
         for(String input : inputList){
-            String runCmd = String.format("java -Dfile.encoding=utf-8 -cp %s Main %s", userCodeParentPath, input);
+            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath,Security_MANAGER_PATH, SECURITY_MANAGER_CLASS, input);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        System.out.println("超时了，中断");
+                        runProcess.destroy();
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+
+                }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
                 executeMessageList.add(executeMessage);
                 System.out.println(executeMessage);
